name:                webTools
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/webTools#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
                     , src/Web
  ghc-options:         -Wall
  exposed-modules:     Web.WebServer
                     , Web.WSServer
  other-modules:
  build-depends:       base >= 4.7 && < 5
                     , protolude >= 0.1.6 && < 0.2
                     , pipes
                     , pipes-aeson
                     , aeson
                     , text
                     , bytestring
                     , lens
                     , lens-aeson
                     , pipes-concurrency
                     , async
                     , stm-containers
                     , stm
                     , uuid
                     , websockets
                     , network
                     , hslogger
                     , wai
                     , wai-websockets
                     , http-types
                     , scotty
                     , warp
                     , warp-tls
                     , wai-util
                     , wai-middleware-static
                     , network-uri
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

executable webTools-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , webTools
                     , protolude >= 0.1.6 && < 0.2
                     , pipes
                     , pipes-aeson
                     , pipes-concurrency
                     , aeson
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

test-suite webTools-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , webTools
                     , protolude >= 0.1.6 && < 0.2
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/githubuser/webTools
